#673: improved browser selection for linux